plugins {
    id 'org.springframework.boot' version '2.6.6'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
    id 'war'
}

war { enabled = false }

group = 'tw.edu.ntub.imd.birc'
version = '1.0.0'
sourceCompatibility = '11'
targetCompatibility = '11'

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

processResources {
//    exclude('application-local.yml')
    exclude('application-local-example.yml')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperty 'file.encoding', 'UTF-8'
}

subprojects {
    group = project.group
    version = project.version
    sourceCompatibility = '11'
    targetCompatibility = '11'

    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test) {
        systemProperty 'file.encoding', 'UTF-8'
    }

    repositories {
        mavenCentral()
        maven {
            url 'http://211.75.1.199:8081/repository/maven-releases/'
            credentials {
                username "downloader"
                password "c.42j0 zj4yk6bp6"
            }
            allowInsecureProtocol = true
        }
    }

    configurations {
        providedRuntime
        implementation.exclude module: 'spring-boot-starter-logging'
    }

    dependencyManagement {
        imports {
            mavenBom('org.springframework.boot:spring-boot-dependencies:2.6.6')
        }
    }

    test {
        useJUnitPlatform()
    }
}

configurations {
    providedRuntime
    implementation.exclude module: 'spring-boot-starter-logging'
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url 'http://211.75.1.199:8081/repository/maven-releases/'
        credentials {
            username "downloader"
            password "c.42j0 zj4yk6bp6"
        }
        allowInsecureProtocol = true
    }
}

dependencies {
    implementation 'tw.edu.ntub.birc:common:1.1.0'
    implementation project('modules:sodd-config')
    implementation project('modules:sodd-database-config')
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'org.yaml:snakeyaml:1.26'
    implementation 'org.apache.commons:commons-text:1.8'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.0'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'io.springfox:springfox-swagger2:3.0.0'
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    compileOnly 'org.projectlombok:lombok:1.18.16'
    annotationProcessor 'org.projectlombok:lombok:1.18.16'
    runtimeOnly 'mysql:mysql-connector-java'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.freemarker:freemarker:2.3.31'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'
}

test {
    useJUnitPlatform()
}